tests/baselines/reference/spellingSuggestionGlobal4.errors.txt
spellingSuggestionGlobal4.ts(3,1): error TS2304: Cannot find name 'global'.


==== spellingSuggestionGlobal4.ts (1 errors) ====
    export {}
    declare global { var x: any }
    global.x // should not suggest `global` (GH#42209)
    ~~~~~~
!!! error TS2304: Cannot find name 'global'.
    